--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "Collections"
   ],
   "author": "Dmitriy Meshcherin",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "jasmine": "^3.4.0",
+    "tsc": "^1.20150623.0"
+  }
 }
